Bug 1752270 - Retry a request that failed with 408 if HTTP/2 is used. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D140827