netwerk/protocol/http/Http2Session.cpp
@@ -4432,8 +4432,7 @@ nsresult Http2Session::OnHeadersAvailable(nsAHttpTransaction* transaction,
                                           nsHttpRequestHead* requestHead,
                                           nsHttpResponseHead* responseHead,
                                           bool* reset) {
-  return mConnection->OnHeadersAvailable(transaction, requestHead, responseHead,
-                                         reset);
+  return NS_OK;
 }
 
 bool Http2Session::IsReused() {
@@ -4670,6 +4669,10 @@ bool Http2Session::CanAcceptWebsocket() {
         mProcessedWaitingWebsockets));
   return mEnableWebsockets &&
          (mPeerAllowsWebsockets || !mProcessedWaitingWebsockets);
+}
+
+PRIntervalTime Http2Session::LastWriteTime() {
+  return mConnection->LastWriteTime();
 }
 
 }  // namespace net
